<resources>
    <string name="app_name">ClimaApp</string>
    <string name="action_settings">Settings</string>
    <string name="city_list_string">City List</string>
    <string name="about_string">About</string>

    <string name="titulo_ciudad">City name</string>
    <string name="titulo_temperatura">Weather</string>
    <string name="titulo_descripcion">Description</string>
    <string name="titulo_humedad">Humidity</string>
    <string name="titulo_velocidad">Wind Speed</string>
</resources>
